// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Case documents uploaded 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of asset:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(render)
      margin="15px 0 48px 0"
    >
      W2
    </ForwardRef(render)>
    <ForwardRef(render)>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-title"
        >
          W2
        </div>
        <div
          className="uploaded-document-filename"
        >
          <ForwardRef(render)>
            abc.png
          </ForwardRef(render)>
        </div>
      </div>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-title"
        >
          W2
        </div>
        <div
          className="uploaded-document-filename"
        >
          <ForwardRef(render)>
            def.pdf
          </ForwardRef(render)>
        </div>
        <div
          className="uploaded-document-filename"
        >
          <ForwardRef(render)>
            ghi.jpg
          </ForwardRef(render)>
        </div>
      </div>
    </ForwardRef(render)>
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload 
          W2
          <input
            accept="image/*,.pdf"
            id="1"
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case maximum uploaded met 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of asset:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(render)
      margin="15px 0 48px 0"
    >
      W2
    </ForwardRef(render)>
    <ForwardRef(render)>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-title"
        >
          W2
        </div>
        <div
          className="uploaded-document-filename"
        >
          <ForwardRef(render)>
            abc.png
          </ForwardRef(render)>
        </div>
        <div
          className="uploaded-document-filename"
        >
          <ForwardRef(render)>
            def.png
          </ForwardRef(render)>
        </div>
        <div
          className="uploaded-document-filename"
        >
          <ForwardRef(render)>
            ghi.png
          </ForwardRef(render)>
        </div>
      </div>
    </ForwardRef(render)>
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div />
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case minimum uploaded met 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of asset:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(render)
      margin="15px 0 48px 0"
    >
      W2
    </ForwardRef(render)>
    <ForwardRef(render)>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-title"
        >
          W2
        </div>
        <div
          className="uploaded-document-filename"
        >
          <ForwardRef(render)>
            abc.png
          </ForwardRef(render)>
        </div>
        <div
          className="uploaded-document-filename"
        >
          <ForwardRef(render)>
            def.png
          </ForwardRef(render)>
        </div>
      </div>
    </ForwardRef(render)>
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload 
          W2
          <input
            accept="image/*,.pdf"
            id="1"
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case minimum uploaded not met 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of asset:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(render)
      margin="15px 0 48px 0"
    >
      W2
    </ForwardRef(render)>
    <ForwardRef(render)>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-title"
        >
          W2
        </div>
        <div
          className="uploaded-document-filename"
        >
          <ForwardRef(render)>
            abc.png
          </ForwardRef(render)>
        </div>
      </div>
    </ForwardRef(render)>
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload 
          W2
          <input
            accept="image/*,.pdf"
            id="1"
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case multiple required document (require all) 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of income:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(render)
      margin="15px 0 48px 0"
    >
      W2 + 1099 Form
    </ForwardRef(render)>
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload 
          W2
          <input
            accept="image/*,.pdf"
            id="1"
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload 
          1099 Form
          <input
            accept="image/*,.pdf"
            id="2"
            name="2"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case no uploaded documents 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of asset:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(render)
      margin="15px 0 48px 0"
    >
      W2
    </ForwardRef(render)>
    <ForwardRef(render) />
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload 
          W2
          <input
            accept="image/*,.pdf"
            id="1"
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case only one required document 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of income:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(render)
      margin="15px 0 48px 0"
    >
      W2
    </ForwardRef(render)>
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload 
          W2
          <input
            accept="image/*,.pdf"
            id="1"
            name="1"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case require one of multiple document 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of income:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(WithStyles)
      component="fieldset"
    >
      <ForwardRef(RadioGroup)
        aria-label="documents"
        name="documents"
        onChange={[Function]}
        value={null}
      >
        <ForwardRef(WithStyles)
          control={<ForwardRef(WithStyles) />}
          disabled={false}
          label="1099 Form"
          value={0}
        />
        <ForwardRef(WithStyles)
          control={<ForwardRef(WithStyles) />}
          disabled={false}
          label="3 Paystubs"
          value={1}
        />
      </ForwardRef(RadioGroup)>
    </ForwardRef(WithStyles)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case require_all false and one of documents types uploaded, disable the rest 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of asset:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(WithStyles)
      component="fieldset"
    >
      <ForwardRef(RadioGroup)
        aria-label="documents"
        name="documents"
        onChange={[Function]}
        value={null}
      >
        <ForwardRef(WithStyles)
          control={<ForwardRef(WithStyles) />}
          disabled={false}
          label="W2"
          value={0}
        />
        <ForwardRef(WithStyles)
          control={<ForwardRef(WithStyles) />}
          disabled={true}
          label="1099"
          value={1}
        />
      </ForwardRef(RadioGroup)>
    </ForwardRef(WithStyles)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case require_all is true and all documents types met min requirement 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of asset:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(render)
      margin="15px 0 48px 0"
    >
      W2 + 1099
    </ForwardRef(render)>
    <ForwardRef(render)>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-title"
        >
          W2
        </div>
        <div
          className="uploaded-document-filename"
        >
          <ForwardRef(render)>
            abc.png
          </ForwardRef(render)>
        </div>
        <div
          className="uploaded-document-filename"
        >
          <ForwardRef(render)>
            def.jpg
          </ForwardRef(render)>
        </div>
      </div>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-title"
        >
          1099
        </div>
        <div
          className="uploaded-document-filename"
        >
          <ForwardRef(render)>
            abc.png
          </ForwardRef(render)>
        </div>
      </div>
    </ForwardRef(render)>
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div />
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload 
          1099
          <input
            accept="image/*,.pdf"
            id="2"
            name="2"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;

exports[`Case require_all is true and only one document type met minimum 1`] = `
<React.Fragment>
  <ForwardRef(render)
    margin="43px 0 0 0"
  >
    Proof of asset:
  </ForwardRef(render)>
  <React.Fragment>
    <ForwardRef(render)
      margin="15px 0 48px 0"
    >
      W2 + 1099
    </ForwardRef(render)>
    <ForwardRef(render)>
      <div
        className="uploaded-document"
      >
        <div
          className="uploaded-document-title"
        >
          W2
        </div>
        <div
          className="uploaded-document-filename"
        >
          <ForwardRef(render)>
            abc.png
          </ForwardRef(render)>
        </div>
        <div
          className="uploaded-document-filename"
        >
          <ForwardRef(render)>
            def.jpg
          </ForwardRef(render)>
        </div>
      </div>
    </ForwardRef(render)>
    <ForwardRef(render)
      marginBottom={51}
      marginTop={48}
    >
      <div />
      <div>
        <ForwardRef(WithStyles)
          classes={
            Object {
              "label": "css-1405lf9",
              "root": "css-11ldqzb",
            }
          }
          color="primary"
          component="label"
          fullWidth={true}
          variant="outlined"
        >
          Upload 
          1099
          <input
            accept="image/*,.pdf"
            id="2"
            name="2"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </ForwardRef(WithStyles)>
      </div>
    </ForwardRef(render)>
  </React.Fragment>
</React.Fragment>
`;
